<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".activity.MainActivity">

        <item
            android:id="@+id/profile_settings"
            android:orderInCategory="100"
            android:title="@string/profile_settings"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_settings"
            android:orderInCategory="100"
            android:title="@string/action_settings"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_filter"
            android:orderInCategory="100"
            android:title="@string/action_settings"
            android:icon="@drawable/ic_autorenew_white_24dp"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/menu_exit"
            android:orderInCategory="100"
            android:title="@string/menu_exit"
            app:showAsAction="never" />

</menu>