        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/widget_background"
            android:orientation="vertical"
            android:layout_margin="@dimen/widget_margin">
            
                <LinearLayout
                    android:id="@+id/widgetLayoutMain"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/widget_background_linear_layout"
                    android:orientation="horizontal"
                    android:paddingStart="@dimen/widget_padding"
                    android:paddingEnd="@dimen/widget_padding">
                    
                        <ImageView
                            android:id="@+id/widgetImgLauncher"
                            android:contentDescription="@string/widget_app_icon"
                            android:layout_width="@dimen/widget_icon"
                            android:layout_height="@dimen/widget_icon"
                            android:layout_gravity="center_vertical"
                            android:src="@mipmap/ic_launcher_round"/>
                    
                        <LinearLayout
                            android:id="@+id/widgetTopBar"
                            android:layout_width="@dimen/widget_top_bar"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical"
                            android:paddingBottom="@dimen/widget_padding_bottom"
                            android:paddingStart="@dimen/widget_padding_start"
                            android:paddingEnd="@dimen/widget_padding_end"
                            android:paddingTop="@dimen/widget_padding_top">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/app_name"
                                    android:textAppearance="?android:attr/textAppearanceSmall"
                                    android:textColor="@color/widget_textview_color"
                                    android:textStyle="bold"/>

                                <TextView
                                    android:id="@+id/txvWidgetTitle"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/widget_title_notifications"
                                    android:textAppearance="?android:attr/textAppearanceSmall"
                                    android:textColor="@color/widget_textview_color"/>

                        </LinearLayout>
                    
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/widget_line"
                    android:background="@color/widget_line_color"/>

                <ListView
                    android:id="@+id/widgetCollectionList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            
        </LinearLayout>