<?xml version="1.0" encoding="utf-8"?>
    <android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

            <android.support.design.widget.AppBarLayout
                android:id="@+id/appbar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/toolbar_expanded_height"
                android:fitsSystemWindows="true"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

                    <android.support.design.widget.CollapsingToolbarLayout
                        android:id="@+id/collapsing_toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fitsSystemWindows="true"
                        app:contentScrim="?attr/colorPrimary"
                        app:layout_scrollFlags="scroll|exitUntilCollapsed">

                            <ImageView
                                android:id="@+id/profile_image"
                                android:contentDescription="@string/paralax"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:fitsSystemWindows="true"
                                android:scaleType="centerCrop"
                                app:layout_collapseMode="parallax"/>

                            <android.support.v7.widget.Toolbar
                                android:id="@+id/toolbar"
                                android:layout_width="match_parent"
                                android:layout_height="?attr/actionBarSize"
                                android:paddingStart="@dimen/toolbar_padding_horizontal"
                                android:paddingEnd="@dimen/toolbar_padding_horizontal"
                                app:layout_collapseMode="pin"
                                android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                                app:elevation="@dimen/toolbar_elevation"/>
                    </android.support.design.widget.CollapsingToolbarLayout>
            </android.support.design.widget.AppBarLayout>

            <android.support.v4.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                    <android.support.v7.widget.CardView
                        android:id="@+id/cardview"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/cardview_margin"
                        android:clickable="true"
                        android:focusable="true"
                        android:background="?selectableItemBackground"
                        app:cardCornerRadius="@dimen/cardview_corner"
                        app:cardElevation="@dimen/cardview_elevation">

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:paddingBottom="@dimen/activity_vertical_margin"
                                android:paddingStart="@dimen/activity_horizontal_margin"
                                android:paddingEnd="@dimen/activity_horizontal_margin"
                                android:paddingTop="@dimen/activity_vertical_margin">

                                <android.support.v7.widget.RecyclerView
                                    android:id="@+id/recycler_view"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:layout_alignParentStart="true"/>

                                <LinearLayout
                                    android:id="@+id/linearLayout"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="8dp"
                                    android:layout_below="@id/recycler_view"
                                    android:layout_alignParentBottom="true"
                                    android:layout_alignParentLeft="true"
                                    android:layout_alignParentStart="true"
                                    android:orientation="horizontal">

                                    <ImageButton
                                        android:id="@+id/photoPickerButton"
                                        android:contentDescription="@string/content_desc_image_picker"
                                        android:layout_width="36dp"
                                        android:layout_height="36dp"
                                        android:background="@android:drawable/ic_menu_gallery" />

                                    <EditText
                                        android:id="@+id/messageEditText"
                                        android:hint="@string/hint_message_write"
                                        android:layout_width="0dp"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center_vertical"
                                        android:layout_weight="1" />

                                    <Button
                                        android:id="@+id/sendButton"
                                        android:contentDescription="@string/content_desc_send_button"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="bottom"
                                        android:enabled="false"
                                        android:text="@string/send_button_label"/>

                                </LinearLayout>

                                <ProgressBar
                                    android:id="@+id/progressBar"
                                    style="?android:attr/progressBarStyleLarge"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_centerHorizontal="true"
                                    android:layout_centerVertical="true"/>
                            </RelativeLayout>
                    </android.support.v7.widget.CardView>
            </android.support.v4.widget.NestedScrollView>
    </android.support.design.widget.CoordinatorLayout>